--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .slides {
-    padding-top: 100px;
+    margin-top: 100px;
 }
 
 .earth {
@@ -26,7 +26,7 @@ body {
 }
 
 .oil-tap {
-    background-image: url(/images/oil_tap.png);
+    background-image: url(/images/oil_tap.svg);
     width: 150px;
     height: 225px;
     position: absolute;
