cursor pointer for button have been added

--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,7 @@ body {
     border-radius: 2px;
     position: relative;
     top: -7px;
+    cursor: pointer;
 }
 
 .slide-final-form .final-form__pointer {
